--- a/.github/workflows/workflow-dispatch.yml
+++ b/.github/workflows/workflow-dispatch.yml
@@ -10,6 +10,33 @@ on:
       manual:
         description: 'Set this if you are running the job manually.'
         default: false
+      manual3:
+        description: 'Set this if you are running the job manually.'
+        default: false
+      manual4:
+        description: 'Set this if you are running the job manually.'
+        default: false
+      manual5:
+        description: 'Set this if you are running the job manually.'
+        default: false
+      manual6:
+        description: 'Set this if you are running the job manually.'
+        default: false
+      manual7:
+        description: 'Set this if you are running the job manually.'
+        default: false
+      manual8:
+        description: 'Set this if you are running the job manually.'
+        default: false
+      manual9:
+        description: 'Set this if you are running the job manually.'
+        default: false
+      manual10:
+        description: 'Set this if you are running the job manually.'
+        default: false
+      manual11:
+        description: 'Set this if you are running the job manually.'
+        default: false
 
 jobs:
   build:
