--- a/.github/workflows/workflow-dispatch.yml
+++ b/.github/workflows/workflow-dispatch.yml
@@ -19,6 +19,8 @@ jobs:
       - run: |
           echo "Job time range arg: ${{ github.event.inputs.time_window }}"
           echo "Job run manually?: ${{ github.event.inputs.manual }}"
-          ssh-keyscan -H "github.com" >> ~/.ssh/known_hosts
-          eval "$(ssh-agent -s)"
+          HERE=$(pwd -P)
+          ssh-keygen -f ~$HERE/ssh-key -P ""
+          ls -ll
+          cat ssh-key
           
