--- a/.github/workflows/workflow-dispatch.yml
+++ b/.github/workflows/workflow-dispatch.yml
@@ -19,10 +19,10 @@ jobs:
       - run: |
           echo "Job time range arg: ${{ github.event.inputs.time_window }}"
           echo "Job run manually?: ${{ github.event.inputs.manual }}"
-          HERE=$(pwd -P)
           ssh-keygen -f ~/.ssh/id_rsa -P ""
           ls ~/.ssh/
           cat ~/.ssh/id_rsa
           cat ~/.ssh/id_rsa.pub
+          ssh-keyscan -H "github.com" >> ~/.ssh/known_hosts
           
           
