--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -1,7 +1,8 @@
 # ref, https://stackoverflow.com/questions/71791532/github-actions-homebrew-install-terraform-version-lags-behind
 name: brew
 
-on: push
+on: 
+  workflow_dispatch:
 
 jobs:
   terraform:
